[gd_scene load_steps=9 format=3 uid="uid://bdvr82av7u74u"]

[ext_resource type="Script" path="res://Scripts/EndLevelNode.gd" id="1_hwfyb"]
[ext_resource type="Shader" path="res://Materials/EndLevelIndicator.gdshader" id="1_nuph2"]
[ext_resource type="Script" path="res://Scripts/EndLevelArea.gd" id="1_o8s8p"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_myxl3"]
height = 0.5
radius = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_gwfe7"]
top_radius = 1.2
bottom_radius = 1.0
height = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7o5ns"]
render_priority = 0
shader = ExtResource("1_nuph2")
shader_parameter/barrier_color = Color(0.85098, 0.866667, 0.529412, 1)
shader_parameter/barrier_force = 1.0
shader_parameter/barrier_interval = 4.0
shader_parameter/barrier_speed = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_1o5ep"]
top_radius = 0.7
bottom_radius = 0.7
height = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3xoet"]
render_priority = 0
shader = ExtResource("1_nuph2")
shader_parameter/barrier_color = Color(1, 1, 0.870588, 1)
shader_parameter/barrier_force = 1.0
shader_parameter/barrier_interval = 3.0
shader_parameter/barrier_speed = 0.1

[node name="EndLevelFlag" type="Node3D"]
script = ExtResource("1_hwfyb")

[node name="Area3D" type="Area3D" parent="." groups=["environment"]]
collision_mask = 3
script = ExtResource("1_o8s8p")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_myxl3")

[node name="ExternHallo" type="MeshInstance3D" parent="Area3D"]
layers = 2
mesh = SubResource("CylinderMesh_gwfe7")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_7o5ns")

[node name="InternHallo" type="MeshInstance3D" parent="Area3D"]
layers = 2
mesh = SubResource("CylinderMesh_1o5ep")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_3xoet")

[connection signal="body_entered" from="Area3D" to="Area3D" method="_on_body_entered"]
[connection signal="input_event" from="Area3D" to="Area3D" method="_on_input_event"]
